# hand_prosthesis_rl_control_pkgs

./: .gitignore  README.md  System_diagram.drawio  Untitled Diagram.drawio  dependencies.yaml  requirements.txt  train_continuous.bash
assets/: CMakeLists.txt  package.xml
assets/graspit_shapenet/category_1/: obj_1.wrl  obj_10.wrl  obj_100.wrl  obj_100.xml  obj_11.wrl  obj_11.xml  obj_12.wrl  obj_13.wrl  obj_14.wrl  obj_15.wrl  obj_16.wrl  obj_16.xml  obj_17.wrl  obj_18.wrl  obj_19.wrl  obj_19.xml  obj_2.wrl  obj_2.xml  obj_20.wrl  obj_21.wrl  obj_22.wrl  obj_23.wrl  obj_24.wrl  obj_24.xml  obj_25.wrl  obj_26.wrl  obj_26.xml  obj_27.wrl  obj_28.wrl  obj_29.wrl  obj_3.wrl  obj_3.xml  obj_30.wrl  obj_31.wrl  obj_31.xml  obj_32.wrl  obj_32.xml  obj_34.wrl  obj_35.wrl  obj_36.wrl  (+92 more)
assets/graspit_shapenet/category_2/: obj_1.wrl  obj_1.xml  obj_10.wrl  obj_100.wrl  obj_11.wrl  obj_12.wrl  obj_13.wrl  obj_14.wrl  obj_14.xml  obj_15.wrl  obj_15.xml  obj_16.wrl  obj_17.wrl  obj_17.xml  obj_18.wrl  obj_18.xml  obj_19.wrl  obj_2.wrl  obj_20.wrl  obj_20.xml  obj_21.wrl  obj_22.wrl  obj_23.wrl  obj_23.xml  obj_24.wrl  obj_25.wrl  obj_26.wrl  obj_27.wrl  obj_27.xml  obj_28.wrl  obj_28.xml  obj_29.wrl  obj_3.wrl  obj_30.wrl  obj_30.xml  obj_31.wrl  obj_32.wrl  obj_33.wrl  obj_33.xml  obj_34.wrl  (+102 more)
assets/graspit_shapenet/category_3/: obj_1.wrl  obj_10.wrl  obj_10.xml  obj_100.wrl  obj_11.wrl  obj_12.wrl  obj_12.xml  obj_13.wrl  obj_13.xml  obj_14.wrl  obj_15.wrl  obj_16.wrl  obj_17.wrl  obj_18.wrl  obj_19.wrl  obj_2.wrl  obj_20.wrl  obj_21.wrl  obj_21.xml  obj_22.wrl  obj_22.xml  obj_23.wrl  obj_24.wrl  obj_25.wrl  obj_25.xml  obj_26.wrl  obj_27.wrl  obj_28.wrl  obj_29.wrl  obj_29.xml  obj_3.wrl  obj_30.wrl  obj_31.wrl  obj_32.wrl  obj_33.wrl  obj_34.wrl  obj_34.xml  obj_35.wrl  (+87 more)
docs/: System_diagram.drawio
evaluation/: analyse_data.py
grasp_planner/: CMakeLists.txt  package.xml  setup.py
grasp_planner/graspit_world_xmls/: mia_hand_world.xml
grasp_planner/scripts/: attach_xml.py  main.py  move_stl_files.py
grasp_planner/src/: grasp_handler.py
hand_prosthesis_env/: CMakeLists.txt  package.xml
hand_prosthesis_env/assets/hands/: mia_hand_camera.xacro
hand_prosthesis_env/launch/: hand_env_bringup.launch  image_processing.launch  view_hand_env.launch  view_hand_prosthesis_env.launch
hand_prosthesis_env/rviz/: env.rviz
hand_prosthesis_env/urdf/cameras/: _d435.gazebo.xacro
hand_prosthesis_env/urdf/hands/: mia_hand_camera_launch.urdf.xacro  mia_hand_default.urdf
hand_prosthesis_rl/: CMakeLists.txt  package.xml  setup.py
hand_prosthesis_rl/launch/: mia_hand_rl_env.launch
hand_prosthesis_rl/params/: hyperparams.yaml  mia_hand.yaml
hand_prosthesis_rl/scripts/: test.py
hand_prosthesis_rl_env/: CMakeLists.txt  package.xml  setup.py
move_hand/: CMakeLists.txt  package.xml  requirements.txt  setup.py
move_hand/include/move_hand/: gazebo_ros_move_hand.hpp
move_hand/launch/: display.launch
move_hand/scripts/: move_hand_node.py
move_hand/scripts/path_planners/: bezier_paths.py
move_hand/src/: gazebo_interface.py  gazebo_ros_move_hand.cpp  move_hand_controller.py
move_hand/src/move_hand/: gazebo_interface.py  move_hand_controller.py  rl_interface.py
move_hand/src/move_hand/control/: move_hand_controller.py  rl_interface.py
move_hand/src/move_hand/controller/: gazebo_interface.py  move_hand_controller.py  rl_interface.py
move_hand/src/move_hand/path_planners/: bezier_paths.py  navigation_function.py  path_planner.py  path_visualiser.py
move_hand/src/move_hand/path_planners/orientation_planners/: dmp_quaternion.py  interpolation.py
move_hand/src/move_hand/utils/: move_helper_functions.py  movement.py  ros_helper_functions.py
move_hand/src/utils/: movement.py  ros_helper_functions.py
move_hand/urdf/: move_hand.urdf.xacro  move_hand_gazebo.urdf.xacro
move_hand_pkg/: CMakeLists.txt  package.xml
move_hand_pkg/include/move_hand/: gazebo_ros_move_hand.hpp
move_hand_pkg/launch/: display.launch
move_hand_pkg/src/: gazebo_ros_move_hand.cpp
move_hand_pkg/urdf/: move_hand.urdf.xacro  move_hand_gazebo.urdf.xacro
move_hand_pkgs/: CMakeLists.txt  package.xml
move_hand_pkgs/launch/: display.launch
move_hand_pkgs/src/: gazebo_ros_move_hand.cpp
path_planners/: CMakeLists.txt  package.xml
path_planners/src/: bezier_paths.py  navigation_function.py  path_visualiser.py
rl_env/: CMakeLists.txt  package.xml  requirements.txt  setup.py
rl_env/launch/: mia_hand_rl_env.launch  test_wrist.launch
rl_env/logging/: .gitignore
rl_env/msg/: RLExperimentInfo.msg
rl_env/params/: hand_params.yaml  hyperparams.yaml  mia_hand.yaml  rl_params.yaml  sim_params.yaml
rl_env/scripts/: main.py  test.py
sim_world/: CMakeLists.txt  package.xml  requirements.txt  setup.py
sim_world/config/: cartesian_controllers.yaml  joint_limits.yaml  wrist_controllers.yaml
sim_world/launch/: hand_env_bringup.launch  image_processing.launch  image_processing_simple.launch  mia_hand_env_bringup.launch  mia_view_hand_env.launch  view_hand_env.launch
sim_world/rviz/: env.rviz
sim_world/src/sim_world/gazebo/: gazebo_interface.py
sim_world/src/sim_world/object_handler/: object_handler.py
sim_world/src/sim_world/object_handler/object_extraction/: new_sdf_generator.py  stl2sdf.py  template_mesh.sdf
sim_world/src/sim_world/rl_interface/: rl_interface.py
sim_world/src/sim_world/world_interfaces/: real_interface.py  simulation_interface.py  world_interface.py
sim_world/urdf/calibration/: joint_limits_cartesian.yaml  joint_limits_fingers.yaml  joint_limits_wrist.yaml  transmission_config_wrist.yaml
sim_world/urdf/cameras/: _d435.gazebo.xacro
sim_world/urdf/hands/: mia_hand_camera_launch.urdf.xacro
sim_world/urdf/macros/: cartesian_gazebo.urdf.xacro  import_joint_limits_cartesian.xacro  import_joint_limits_wrist.xacro  joint_cartesian.transmission.xacro  joint_transmission_wrist.xacro  joint_wrist.transmission.xacro  wrist_gazebo.urdf.xacro
simulation_world/: CMakeLists.txt  package.xml
simulation_world/launch/: hand_env_bringup.launch  view_hand_env.launch
(+2813 files in other folders)
