<?xml version="1.0"?>
<package format="2">
  <name>hand_prosthesis_env</name>
  <version>1.0.0</version>
  <description>The hand_prosthesis_env package</description>
  <maintainer email="vrisag20@student.aau.dk">Victor Risager</maintainer>
  <maintainer email="ddoros20@student.aau.dk">Daniel Doroshenko</maintainer>
  <maintainer email="jbla20@student.aau.dk">Jakob Bøgh Larsen</maintainer>
  <maintainer email="cwitha23@student.aau.dk">Withanage Chathushka Jayashan</maintainer>
  <license>APACHE 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>

  <build_depend>python-catkin-pkg</build_depend>
  <build_depend>urdf</build_depend>

  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>urdf</build_export_depend>
  
  <exec_depend>rospy</exec_depend>

  <exec_depend>gazebo_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>rviz</exec_depend>

</package>