<?xml version="1.0"?>
<package format="2">
  <name>move_hand</name>
  <version>1.0.0</version>
  <description>The move_hand package responsible for moving a robotic prosthesis in gazebo and controlling it correctly.</description>
  <maintainer email="vrisag20@student.aau.dk">Victor Risager</maintainer>
  <maintainer email="ddoros20@student.aau.dk">Daniel Doroshenko</maintainer>
  <maintainer email="jbla20@student.aau.dk">Jakob Bøgh Larsen</maintainer>
  <maintainer email="cwitha23@student.aau.dk">Withanage Chathushka Jayashan</maintainer>
  <license>APACHE 2.0</license>

  <!-- Specify the dependencies that are needed during the build process for e.g. linking and compilation and not needed during runtime. Examples: 'catkin', 'cmake', 'pkg-config' -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies that are needed during both build and runtime. Examples: other ros packages, softwer components and libraries. -->
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>gazebo_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>controller_manager_msgs</build_depend>
  <build_depend>python-catkin-pkg</build_depend>
  <build_depend>message_generation</build_depend>

  <!-- Specifies dependencies that are required to build other packages that depend on the current package. This is used when the current package provides e.g. headerfiles or libraries that other packages use. -->
  <build_export_depend>rospy</build_export_depend>

  <!-- Dependencies only needed during runtime execution of the package. These can also be other ros packages, software components and libraries, that are not needed during the build process. -->
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>gazebo_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>controller_manager_msgs</exec_depend>
  <exec_depend>python-numpy</exec_depend>
  <exec_depend>python-matplotlib</exec_depend>

  <!-- Dependencies But only needed if you execute certain RobotEnvs and TasksEnvs-->
  <!--
  <exec_depend>std_srvs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>trajectory_msgs</exec_depend>
  <exec_depend>rosgraph_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>tf</exec_depend>
  <exec_depend>intera_interface</exec_depend>
  <exec_depend>intera_core_msgs</exec_depend>
  <exec_depend>smart_grasping_sandbox</exec_depend>
  <exec_depend>moveit_msgs</exec_depend>
  <exec_depend>robotx_gazebo</exec_depend>
  <exec_depend>python-numpy</exec_depend>
  -->


  <export>
    <rosdoc config="rosdoc.yaml"/>
  </export>
</package>