<?xml version="1.0"?>
<package format="2">
  <name>path_planners</name>
  <version>0.0.0</version>
  <description>The path_planners package</description>
  <maintainer email="vrisag20@student.aau.dk">Victor Risager</maintainer>
  <maintainer email="ddoros20@student.aau.dk">Daniel Doroshenko</maintainer>
  <maintainer email="jbla20@student.aau.dk">Jakob Bøgh Larsen</maintainer>
  <maintainer email="cwitha23@student.aau.dk">Withanage Chathushka Jayashan</maintainer>
  <license>APACHE 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
